<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Occupancy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="action_clearBeacons">Clear All</string>
	<string name="action_autoScan">Auto Mode</string>
	<string name="publish">Publish</string>
	<string name="scan">Scan</string>
	<string name="spaces">Space Occupancy</string>
	<string name="users">User\'s Location</string>
	<string name="view">View iBeacons</string>
	<string name="spmng">Space Occupancy\nAn application for measurement\n of occupancy using iBeacons.</string>
	<string name="mainimg">Bluetooth Logo</string>
	<string name="search">Search</string>
	<string name="spacebut">Search</string>
	<string name="searchhint">Enter Users Phone Id</string>
    <string name="searchhint2">Enter Space Name</string>
    <color name="white">#FFFFFF</color>
    
</resources>
